fixed shift selection (hopefully)

--- a/css/style.less
+++ b/css/style.less
@@ -111,6 +111,7 @@ body {
 	z-index: 9000;
 	border: 6px solid transparent;
 	.border-image(url(../imgs/selection.gif) 6 6 round);
+	cursor: move;
 /*	cursor: -webkit-grab;
 	cursor: grab;*/
 
